--- a/copier.yml
+++ b/copier.yml
@@ -1,4 +1,8 @@
 _subdirectory: "template"
+_jinja_extensions:
+  - jinja2_time.TimeExtension
+  - whiteprints_template_context.context.ContextUpdater
+  - whiteprints_template_context.filters.WhiteprintsFilters
 _tasks:
   - ["uv", "run", "injectors/call_gh.py"]
   - ["rm", "-r", "injectors", "github_protection_ruleset"]
