--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ depends = pre-commit
 commands_pre =
     - gh repo delete --yes whiteprints-tests/test-prot-{on_platform}-{envname}
 commands =
-    uvx --with license-expression --with jinja2_time --with copier-templates-extensions copier copy \
+    uvx --with whiteprints-template-context copier copy \
         --trust --force https://github.com/whiteprints/template-python.git {env_tmp_dir} \
         --data project_name="test prot {on_platform} {envname}" \
         --data author="Romain Brault" \
@@ -35,9 +35,9 @@ commands =
         --data copyright_holder_email="mail@romainbrault.com" \
         --data line_length="79" \
         --data target_python_version="{base_python}"
-    uvx --with license-expression --with jinja2_time --with copier-templates-extensions copier copy \
+    uvx --with whiteprints-template-context copier copy \
         --trust --force https://github.com/whiteprints/template-github.git {env_tmp_dir}
-    uvx --with jinja2_time copier copy \
+    uvx --with whiteprints-template-context copier copy \
         --trust --overwrite --vcs-ref HEAD {tox_root} {env_tmp_dir}
 commands_post =
     - gh repo delete --yes whiteprints-tests/test-prot-{on_platform}-{envname}
@@ -53,7 +53,7 @@ depends = pre-commit
 commands_pre =
     - gh repo delete --yes whiteprints-tests/test-prot-{on_platform}-{envname}
 commands =
-    uvx --with license-expression --with jinja2_time --with copier-templates-extensions copier copy \
+    uvx --with whiteprints-template-context copier copy \
         --trust --force https://github.com/whiteprints/template-python.git {env_tmp_dir} \
         --data project_name="test prot {on_platform} {envname}" \
         --data author="Romain Brault" \
@@ -66,9 +66,9 @@ commands =
         --data copyright_holder_email="mail@romainbrault.com" \
         --data line_length="79" \
         --data target_python_version="{base_python}"
-    uvx --with license-expression --with jinja2_time --with copier-templates-extensions copier copy \
+    uvx --with whiteprints-template-context copier copy \
         --trust --force https://github.com/whiteprints/template-github.git {env_tmp_dir}
-    uvx --with jinja2_time copier copy \
+    uvx --with whiteprints-template-context copier copy \
         --trust --overwrite --vcs-ref HEAD {tox_root} {env_tmp_dir}
 commands_post =
     - gh repo delete --yes whiteprints-tests/test-prot-{on_platform}-{envname}
